--- a/builder-stack-app-sample/databricks.yml
+++ b/builder-stack-app-sample/databricks.yml
@@ -9,37 +9,21 @@ targets:
     mode: production
   prod:
     mode: production
+    workspace:
+      root_path: /Workspace/Builder-Stack-Sample/${bundle.name}/${bundle.target}
+    resources:
+      apps:
+        main_app:
+          name: ${bundle.name}
+      database_instances:
+        app_db:
+          name: ${bundle.name}
 
 resources:
   database_instances:
     app_db:
       name: ${bundle.name}-${bundle.target}
       capacity: CU_1
-
-  database_catalogs:
-    app_catalog:
-      # This catalog will be managed by the Lakebase instance.
-      name: ${bundle.name}-catalog-${bundle.target}
-      database_instance_name: ${resources.database_instances.app_db.name}
-      database_name: databricks_postgres #The default database name for Databricks Postgres
-      create_database_if_not_exists: true
-
-  # -------------------------------------------------------------------------
-  # Synced Tables (Optional)
-  # -------------------------------------------------------------------------
-  # Uncomment the block below to sync tables from Unity Catalog to Lakebase.
-  # Limitation: As of Dec 2025, Your Unity Catalog metastore need to have a default storage location configured.
-
-  # synced_database_tables:
-  #   customer_sync:
-  #     name: ${resources.database_catalogs.app_catalog.name}.${resources.database_catalogs.app_catalog.database_name}.customer_sync
-  #     database_instance_name: ${resources.database_instances.app_db.name}
-  #     logical_database_name: ${resources.database_catalogs.app_catalog.database_name}
-  #     spec:
-  #       source_table_full_name: samples.tpch.customer
-  #       scheduling_policy: TRIGGERED
-  #       primary_key_columns:
-  #         - c_custkey
 
   apps:
     main_app:
@@ -50,10 +34,9 @@ resources:
       permissions:
         - level: CAN_USE
           group_name: users
-
       resources:
         - name: app_db_binding
           database:
             instance_name: ${resources.database_instances.app_db.name}
-            database_name: ${resources.database_catalogs.app_catalog.database_name}
+            database_name: databricks_postgres
             permission: CAN_CONNECT_AND_CREATE
